--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -22,6 +22,12 @@
   <label for="username">Enter username: </label>
   <input type="text" th:field="*{username}" id="username"/>
   <br/>
+  <label for="nameRole">Roles</label>
+  <select multiple name="nameRole" id="nameRole">
+    <option>ROLE_USER</option>
+    <option>ROLE_ADMIN</option>
+  </select>
+  <br/>
   <input type="submit" value="Create!"/>
 </form>
 
